minor style fixes for mobile responsiveness - fixing display issue of footer bar on home screen on iphone5

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,6 +119,9 @@ h1 {
 }
   footer {
     font-size: 10px;
-    margin-bottom: 0px;
   }
+
+body.pages.home footer {
+  margin-bottom: -200px;
+}
 }
